
	Fixes all over the tree.

	Kconfig infrastructure rebased against 2.6.36-rc1, bringing
	misc fixes + nconfig and savedefconfig targets.

	Toolchain: ARM cortex A9 support

	Fs: Squashfs 4.1 with lzo support

	Old-style package hooks (*_HOOK_POST_*) removed. Use the more
	generic new-style ones instead.

	Download handling reworked and support for git/svn downloads
	added.

	New packages: xz

	Updated/fixed packages: alsa-lib, at, avahi, axel, berkeleydb,
	bind, bmon, boa, bridge-utils, bsdiff, busybox, dbus, dmraid,
	docker, dosfstools, dropbear, e2fsprogs, expat, ezxml, fbset,
	freetype, gawk, gvfs, haserl, hostapd, hwdata, ifplugd, iperf,
	iproute2, iptables, jpeg, kexec, kismet, less, libcurl,
	libdnet, libevent, libglade, libgtk2, libiconv, libidn,
	libmms, libnl, liboil, libpcap, libpng, libungif, libxml2,
	libxslt, lighttpd, lite, logrotate, m4, mdadm, metacity,
	mtd-utils, mysql_client, nano, nbd, ncftp, neon, netperf,
	ntfsprogs, ntp, openntpd, openssh, openvpn, oprofile, pango,
	pcre, php, prboom, radvd, qt, samba, sdl_mixer, sdl_sound,
	shared-mime-info, speex, sqlite, squashfs, strace, taglib,
	tcpdump, tiff, tn5250, udev, udpcast, usbmount, usbutils,
	which, xlib_libX11, zlib

	Deprecated packages: hotplug, lzma

	Removed packages: dillo, libglib12, libgtk12, microwin,
	pcmcia

	Issues resolved (http://bugs.uclibc.org):

	#2521: Can't compile sdl_mixer, mikmod.h can't be found
	#2581: libmms: Update to 0.6, and patch to work on architectures...

2010.08: Released August 31th, 2010:

	Fixes all over the tree.

	Updated/fixed packages: atk, xstroke

	Removed packages: lxdoom

2010.08-rc2, Released August 30th, 2010:

	Fixes all over the tree.

	Mark the combination of uClibc 0.9.31, gcc 4.2.x, C++ and
	locale support as broken. Remove deprecated GCC 4.2.[1-3]
	versions.

	Mark CRIS architecture as deprecated, as it is discontinued
	upstream.

	Marked shared config.cache as experimental and disabled by